@@ -10,6 +10,7 @@ Image file for custom field can be enlarged using modal - ADDED
 Bottom section widget area inside wrapper div - FIXED
 Review text first paragraph not wrapped in `p` tags - FIXED
 Moved out avatar from reviews header - CHANGED
+Changed terms and conditions link from a text input to a page select under GD>Permalinks for WPML compatibility - CHANGED
 
 v1.5.0
 Google analytic countries throws error - FIXED
